# codetv

./: .cursor-rules  .dockerignore.frontend  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE.md  AWESOME_LIST_CLI.md  Development-Guidelines.md  Dockerfile.frontend  FRONTEND_DEPLOYMENT.md  GALILEO_INTEGRATION.md  Makefile  README.md  TOOLS_DOCUMENTATION.md  awesome_list_cli.py  awesome_list_examples.py  awesome_list_examples_with_tools.py  awesome_list_interface.py  awesome_list_logging.py  dev-requirements.txt  galileo_example.py  pyproject.toml  render.yaml  requirements-galileo.txt  requirements.txt  runtime_and_environment_configuration.md  rxconfig.py  test_galileo_integration.py  test_improved_agent.py
agent_framework/: config.py  factory.py
agent_framework/llm/: openai_provider.py
agent_framework/utils/: galileo_logger.py
app/: app.py
app/pages/index/: page.py
awesome_list_agent/: __init__.py  agent.py  awesome_list_agent.py  factory.py
awesome_list_agent/llm/: openai_provider.py
awesome_list_agent/tools/: awesome_list_parser.py  base.py  content_analysis_tool.py  markdown_youtube_extractor_tool.py  web_scraping_tool.py  youtube_metadata_tool.py
awesome_list_agent/utils/: galileo_logger.py  logging.py
src/: download_transcript.py  extract_youtube_urls.py  firecrawl-test.py  firecrawl.py  get_readme.py  get_youtube.py  get_youtube_metadata.py  mcp.py  webhook.py  webhook_readme.py  webhook_youtube.py
tests/: __init__.py  conftest.py  test_new_tools.py
tests/unit/: test_example.py
